rename directories in test/

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,7 +8,7 @@
 	>
 	<testsuites>
 		<testsuite name="Requisite Unit Tests">
-			<directory prefix="Test" suffix=".php">./tests/unit/</directory>
+			<directory prefix="Test" suffix=".php">./tests/Unit/</directory>
 		</testsuite>
 	</testsuites>
 </phpunit>
