--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,13 +7,8 @@
 	convertWarningsToExceptions="true"
 	>
 	<testsuites>
-		<!-- the order of the test-suites is important! -->
-		<testsuite name="BootstrapTests">
-			<file>./tests/Unit/TestRequisite.php</file>
-		</testsuite>
-		<testsuite name="LoaderTests">
-			<directory prefix="Test" suffix=".php">./tests/Unit/</directory>
-			<exclude>./tests/Unit/TestRequisite.php</exclude>
+		<testsuite name="Unit tests">
+			<directory suffix="Test.php">./tests/Unit/</directory>
 		</testsuite>
 	</testsuites>
 </phpunit>
